chassis/tests/failing/comp_default_impl.stderr
error: Default implementation not allowed
  --> $DIR/comp_default_impl.rs:18:42
   |
18 |           fn resolve_dummy(&self) -> Dummy {
   |  __________________________________________^
19 | |             Dummy
20 | |         }
   | |_________^
